--- a/DragonbaneCharacterSheetGenerator/wwwroot/index.html
+++ b/DragonbaneCharacterSheetGenerator/wwwroot/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="DragonbaneCharacterSheetGenerator.styles.css" />
+    <!-- Font Awesome for star icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="icon" href="data:,">
 </head>
 
